--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -38,6 +38,6 @@ jobs:
           version-fragment: ${{ github.event.inputs.version }}
         
       - name: create release
-        run: gh release create ${{ steps.bump-version.outputs.next-version }} -F CHANGELOG.md --generate-notes
+        run: gh release create ${{ steps.bump-version.outputs.next-version }} --target main --generate-notes
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
