--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,51 +1,46 @@
 name: release
 
 on:
-  workflow_dispatch:
-    inputs:
-      version:
-        required: true
-        type: choice
-        options: 
-          - major
-          - feature
-          - bug
-          - beta
-          - alpha
-          - rc
+  push:
   
-jobs:          
-  staging:
+jobs:
+  init:
     runs-on: ubuntu-latest
-    environment: staging
+    steps:
+      - id: init
+        name: starting...
+        run: |
+          echo "Startng CI/CD of ${{ github.repository }}"
+
+  development:
+    if: ${{ github.ref == 'refs/head/develop' }}
+    needs: init
+    runs-on: ubuntu-latest
+    environment:
+      name: development
+      url: develop.example.com
+    permissions:
+      contents: read
     
     steps:
       - name: checkout
         uses: actions/checkout@v3
         with:
           fetch-depth: 0
-        
-      - id: current-version
-        name: get version
-        uses: WyriHaximus/github-action-get-previous-tag@v1
-        with:
-          fallback: 0.0.0
 
-      - id: bump-version
-        name: bump version
-        uses: christian-draeger/increment-semantic-version@1.0.2
-        with:
-          current-version: ${{ steps.current-version.outputs.tag }}
-          version-fragment: ${{ github.event.inputs.version }}
-        
-      - name: create release
-        run: gh release create ${{ steps.bump-version.outputs.next-version }} --target main --generate-notes
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          
+      - name: starting...
+        run: |
+          echo "Deployed to Development"
+
   production:
+    if: ${{ github.ref == 'refs/head/main' }}
+    needs: init
     runs-on: ubuntu-latest
-    environment: production
+    environment:
+      name: production
+      url: www.example.com
+    permissions:
+      contents: read
     
     steps:
       - name: checkout
