--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -5,14 +5,6 @@ on:
     branches: [ main, develop ]
   
 jobs:
-  init:
-    runs-on: ubuntu-latest
-    steps:
-      - id: init
-        name: starting...
-        run: |
-          echo "Startng CI/CD of ${{ github.repository }}"
-          
   test:
     runs-on: ubuntu-latest
     steps:
@@ -22,7 +14,7 @@ jobs:
           echo "Testing of ${{ github.repository }}"
 
   deploy-development:
-    if: ${{ github.ref == 'refs/head/develop' }}
+    if: ${{ github.ref == 'refs/heads/develop' }}
     needs: test
     runs-on: ubuntu-latest
     environment:
@@ -42,7 +34,7 @@ jobs:
           echo "Deployed to Development"
 
   deploy-production:
-    if: ${{ github.ref == 'refs/head/main' }}
+    if: ${{ github.ref == 'refs/heads/main' }}
     needs: test
     runs-on: ubuntu-latest
     environment:
